Modificato index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
-<img src="googlelogo.png" alt="logo" title="logo">
-<p><b>404.</b> That&#39;s an error.</p>
-<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
-<p>That&#39;s all we know.</p>
-<img src="robot.png" alt="robot" title="robot">
+<!DOCTYPE html>
+<html>	
+
+	<head>
+	</head>
+	
+	<body>
+		<img src="googlelogo.png" alt="logo" title="logo">
+		<p><b>404.</b> That&#39;s an error.</p>
+		<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
+		<p>That&#39;s all we know.</p>
+		<img src="robot.png" alt="robot" title="robot">
+	</body>
+
+</html>
