Modificato index.html

--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html>	
 
 	<head>
+		<title>Error 404 (Not Found)!!1</title>
+		<meta charset="UTF-8">
+		<meta lang="en">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	
 	<body>
 		<img src="googlelogo.png" alt="logo" title="logo">
-		<p><b>404.</b> That&#39;s an error.</p>
+		<p><strong>404.</strong> That’s an error.</p>
 		<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
-		<p>That&#39;s all we know.</p>
+		<p>That’s all we know.</p>
 		<img src="robot.png" alt="robot" title="robot">
 	</body>
 
