--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 		<meta lang="en">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
+
+	<style>
+		body {
+			background-color: violet;
+		}
+		span {
+			background-color: black;
+			color: lime;
+		}
+	</style>
 	
 	<body>
-		<img src="googlelogo.png" alt="logo" title="logo">
-		<p><strong>404.</strong> That’s an error.</p>
-		<p>The requested URL <code>/sfasfsa</code> was not found on this server.</p>
-		<p>That’s all we know.</p>
+		<a href="https://www.google.com/"><img src="googlelogo.png" alt="logo" title="logo"></a>
+		<p><span>404. That’s an error.</span></p>
+		<p><span>The requested URL <code>/sfasfsa</code> was not found on this server. That’s all we know.</span></p>
 		<img src="robot.png" alt="robot" title="robot">
 	</body>
 
